fixed height on safari mobile and on  browser

--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,6 @@ html {
   background: #fafafc;
 }
 
-.App {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
 .tabsContainer {
   background: #fff;
   position: fixed;
@@ -17,8 +10,8 @@ html {
   bottom: 0;
   width: 100%;
   height: 100%;
-  max-height: 70px;
-  min-height: 70px;
+  max-height: 6rem;
+  min-height: 6rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -112,7 +105,7 @@ html {
   row-gap: 20px;
   overflow-y: auto;
   scroll-behavior: smooth;
-  height: 50vh;
+  height: 35vh;
 }
 
 .transaction {
